--- a/public/job-portal/src/app/pages/profile/profile.component.html
+++ b/public/job-portal/src/app/pages/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<p class="title">
+  Hello {{ user.fullName }}!
+</p>
+
+<p>Your username is: <span class="font-weight-bold">{{ user.username }}</span></p>
