--- a/public/job-portal/src/app/shared/components/header/header.component.html
+++ b/public/job-portal/src/app/shared/components/header/header.component.html
@@ -3,10 +3,15 @@
     <button routerLink="/">Home</button>
     <button routerLink="/jobs">Jobs</button>
     <button routerLink="/search">Search</button>
+    <button routerLink="/add-job"
+      *ngIf="isLoggedIn">Add Job</button>
   </div>
   <div>
-    <button routerLink="/profile">Profile</button>    
-    <button>Log Out</button>    
-    <button routerLink="/login">Log In</button>    
+    <button routerLink="/profile"
+      *ngIf="isLoggedIn">Profile</button>
+    <button (click)="logOut()"
+      *ngIf="isLoggedIn">Log Out</button>    
+    <button routerLink="/login"
+      *ngIf="!isLoggedIn">Log In</button>    
   </div>
 </div>
